fix wrapping problem

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,9 @@ body
     width: 1200px;
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .container .card
